<resources>
    <string name="app_name">AcademicWeek</string>
    <string name="settings">Settings</string>
    <string name="settings_description">Open settings</string>
    <string name="top_week_text">Now Is The</string>
    <string name="bottom_week_text">Academic Week</string>
    <string name="week_text">%1$d / %2$d</string>
    <string name="counting_from">Counting From %1$d.%2$d</string>
    <string name="counting_until">Until %1$d.%2$d</string>
    <string name="calendar">Calendar</string>
    <string name="count_date">Count Dates</string>
    <string name="count_date_not_specified">Count Date is not specified</string>
    <string name="week_not_started">The study hasn\'t started yet</string>
    <string name="study_is_over">The study is over</string>
    <string name="select_count_date">Specify Start and End days</string>
    <string name="count_date_summary">Set academic week count dates</string>
    <string name="theme">Theme</string>
    <string name="select_theme">Choose UI theme</string>
    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="general_settings">General</string>
    <string name="applied_count_date">Count dates applied</string>
    <string name="widget_description">Default AcademicWeek widget</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">AcademicWeek on your home screen</string>
    <string name="error">Error</string>
    <string name="selection_hint">Select the first study day and the last one</string>
    <string name="configure_widget">Configure Widget</string>
    <string name="set_count_dates">Set Count Dates</string>
    <string name="display_total_weeks_count">Display total weeks count</string>
    <string name="continue_widget">Continue</string>
    <string name="select_count_dates_error">Select count dates to continue</string>
</resources>